--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Main#index</h1>
 <p>Find me in app/views/main/index.html.erb</p>
+<% if user_signed_in? %>
+  <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
+<% end %>
