--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,18 @@ h3 {
   font-size: 3.6rem;
 }
 
+h4 {
+  font-size: 3rem;
+}
+
+h5 {
+  font-size: 2.4rem;
+}
+
+h6 {
+  font-size: 1.5rem;
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0.67rem;
   margin-bottom: 2rem;
@@ -32,13 +44,20 @@ header {
     border-bottom: 1px solid #D1D1D1;
   }
 
-  .signout-btn {
+  .nav-buttons {
     position: absolute;
     right: 0;
     top: 50%;
     float: right;
-    width: 100px;
     transform: translate(0, -50%);
+
+    button {
+      margin-right: 5px;
+    }
+
+    button.signout-btn {
+      margin-right: 0;
+    }
   }
 }
 
@@ -61,5 +80,17 @@ header {
 
   h3 {
     font-size: 3rem;
+  }
+
+  h4 {
+    font-size: 2.4rem;
+  }
+
+  h5 {
+    font-size: 1.8rem;
+  }
+
+  h6 {
+    font-size: 1.5rem;
   }
 }
