--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -27,3 +27,16 @@
 .example-block {
   margin-bottom: 5px;
 }
+
+#correlation-result {
+  margin-top: 15px;
+  background-color: #f5f5f5;
+
+  .panel-body {
+    padding: 9px 9px 9px 15px;
+  }
+
+  h5 {
+    margin: 0;
+  }
+}
