--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -23,7 +23,7 @@
       <code>1,2,3,4,5,6,7</code>
     </div>
     <div class="form-group">
-      <textarea rows="10" placeholder="Enter dataset here" class="form-control" ng-model="dataset"></textarea>
+      <textarea rows="10" placeholder="Enter dataset here" class="form-control" ng-model="datasets.dataset"></textarea>
     </div>
     <button class="btn btn-info" ng-click="analyze()">Analyse</button>
   </div>
@@ -51,12 +51,12 @@
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
-        <textarea rows="10" placeholder="Enter first dataset here" class="form-control" ng-model="dataset1"></textarea>
+        <textarea rows="10" placeholder="Enter first dataset here" class="form-control" ng-model="datasets.dataset"></textarea>
       </div>
     </div>
     <div class="col-md-6">
       <div class="form-group">
-        <textarea rows="10" placeholder="Enter second dataset here" class="form-control" ng-model="dataset2"></textarea>
+        <textarea rows="10" placeholder="Enter second dataset here" class="form-control" ng-model="datasets.second_dataset"></textarea>
       </div>
     </div>
   </div>
