Add loading spinner.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "angular-ui-notification/angular-ui-notification.min";
+@import "angular-loading-bar/loading-bar.min";
 @import "main";
 
 h1 {
