--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,7 +17,7 @@
 </div>
 
 <div class="row" ng-show="page == 'index'" ng-controller="AnalyzeCtrl">
-  <div class="col-md-8">
+  <div class="col-md-8 col-sm-7 col-xs-12">
     <div class="example-block">
       <span>Enter at least 3 numbers without spaces like:</span>
       <code>1,2,3,4,5,6,7</code>
@@ -25,9 +25,9 @@
     <div class="form-group">
       <textarea rows="10" placeholder="Enter dataset here" class="form-control" ng-model="datasets.dataset"></textarea>
     </div>
-    <button class="btn btn-info" ng-click="analyze()">Analyse</button>
+    <button id="analyze-btn" class="btn btn-info" ng-click="analyze()">Analyse</button>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4 col-sm-5 col-xs-12">
     <div class="panel panel-default" ng-show="results != null">
       <div class="panel-heading">Results</div>
       <ul class="list-group" id="analysis-results">
@@ -43,7 +43,7 @@
   </div>
 </div>
 
-<div ng-show="page == 'correlation'" ng-controller="CorrelationCtrl">
+<div ng-show="page == 'correlation'" ng-controller="CorrelationCtrl" id="correlation-block">
   <h3>Correlation check between two datasets</h3>
   <div class="example-block">
     <span>Enter 2 arrays of data of <strong>equal length</strong>. Each array should contain <strong>at least 3 different numbers</strong>.</span>
